--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_course_db?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username= root
+spring.datasource.password=coti
+spring.jpa.show-sql=true
+server.port=4123
